# flatdict

./: .checkignore  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  bootstrap  flatdict.py  pyproject.toml  setup.cfg  setup.py  test-requirements.txt  tests.py
.github/workflows/: deploy.yaml  testing.yaml
ci/: combine-coverage.sh  test.sh  upload-coverage.sh
docs/: Makefile  conf.py  index.rst
docs/source/: conf.py
flatdict/: __init__.py
requires/: testing.txt
tests/: flatdict_tests.py
