[metadata]
name = flatdict
version = attr: flatdict.__version__
description = Python module for interacting with nested dicts as a single level dict with delimited keys.
long_description = file: README.rst, LICENSE.rst
url = https://github.com/gmr/flatdict
author = Gavin M. Roy
author_email = gavinmroy@gmail.com
license = BSD 3-Clause License
classifiers =
    Topic :: Software Development :: Libraries
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
include_package_data = True
py_modules = flatdict
zip_safe = True

[options.package_data]
* = CHANGELOG.md, README.rst, LICENSE

[flake8]
application-import-names = flatdict
exclude = ci, docs, env
ignore = RST304
import-order-style = google

[coverage:run]
branch = True
command_line = -m unittest discover

[coverage:report]
show_missing = True
omit =
    tests.py

[coverage:html]
directory = build/coverage

[coverage:xml]
output = build/coverage.xml
